Got the tracker page to a working state. Probably still some spacing issues. Those can be fixed in time as they are encountered

--- a/tracker.css
+++ b/tracker.css
@@ -85,20 +85,36 @@ button {
     border-radius: .5em;
 }
 
+main div {
+    margin: .5em;
+    background-color: #17202A;
+    border-radius: 6px;
+    padding: .5em;
+}
+
 .GameView {
     flex: 1;
     display: flex;
-    width:inherit;
-    flex-direction: row;
+    width:100%;
+    flex-direction: column;
+    
 }
 
 .gameTimeView {
+    flex: 1;
     display: grid;
-    grid-template-rows: repeat(auto-fill, 100px);
-    border: thin white;
-    background-color: black;
+    grid-template-columns: repeat(auto-fill, minmax(125px, 1fr));
+    grid-auto-rows: minmax(175px, 175px);
     gap: 1em;
-    
+    margin-bottom: 1em;
+}
+
+.PriorityList .gameTimeView {
+    grid-template-columns: repeat(2, minmax(100px, 1fr));
+}
+
+.Backlog .gameTimeView {
+    grid-template-columns: repeat(2, minmax(100px, 1fr));
 }
 
 .game {
@@ -107,7 +123,10 @@ button {
     background-color: firebrick;
     border: thick white;
     margin: 0.5em;
+    height: 150px;
+    width: 100px;
 }
+
 
 .Backlog {
     flex: 1;
